| Summary: | ASTERISK-27359: pjproject bundled: Don't disable assertions when --enable-dev-mode is used. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2017-10-18 12:44:00 | Date Closed: | 2017-10-25 09:04:03 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | pjproject/pjsip |
| Versions: | 13.17.2 GIT 15.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | This would help catch some potential misuse of pjproject functions. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-10-18 12:44:00.491-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2017-10-18 19:55:11.775-0500 I'm not in favor of this. PJPROJECT assertions have triggered on legitimate exceptions as well. By: Corey Farrell (coreyfarrell) 2017-10-19 08:24:49.143-0500 Do you mean they sometimes trigger assertions on non-legitimate exceptions? By: Richard Mudgett (rmudgett) 2017-10-19 09:32:41.789-0500 I mean the assertions are used improperly. Assertions are supposed to indicate that something should never happen. However, the assertions trigger for normal error cases that should return an error code and not abort the program. By: Corey Farrell (coreyfarrell) 2017-10-20 11:40:35.856-0500 Sounds like you don't think it's worth the effort to try fixing pjproject's use of assertions? Or are you just saying the improper assertions would need to be found & fixed before doing this to avoid causing massive number of testsuite failures? By: Joshua C. Colp (jcolp) 2017-10-20 11:41:51.954-0500 [~coreyfarrell] I think it is worthwhile, if we fix their use of assertions. By: Friendly Automation (friendly-automation) 2017-10-25 09:04:04.589-0500 Change 6886 merged by Joshua Colp: Bundled pjproject: Enable pj_assert when dev-mode is enabled. [https://gerrit.asterisk.org/6886|https://gerrit.asterisk.org/6886] | ||