Bundled pjproject: Enable pj_assert when dev-mode is enabled.

ASTERISK-27359

Change-Id: Ib01fb6c01f9bb87129374a51cb9318c474147517